--- a/Poisson1.qmd
+++ b/Poisson1.qmd
@@ -188,7 +188,7 @@ dicentric|>
 
 
 Verifica-se que a quantidade total de células e a quantidade de cromossomos com anomalia têm uma distribuição assimétrica, já que a mediana e a média foram bastante distintas. O coeficiente de variação da quantidade total de células é alto, desse modo, há um grande variabilidade nessa variável, sendo até maior que a variabilidade presente na variável quantidade de cromossomos anômalos. 
-Percebe-se que as variáveis *doseamt* e *doserate* por serem variáveis categóricas que demonstam os niveis de radiação empregados no experimento não tem uma análise relevante. 
+
 Para facilitar a compreenção das medidas de células anômalas e celulas totais, apresentadas na Tabela 1, a Figura 1 mostra graficamente estas distribuições.
 
 
@@ -277,7 +277,7 @@ g1 + b1 + g2 + b2 +
 ```
 
 
-Os gráficos confirmam as observações anteriores acrescentado que em anbas as distribuições pode se verificar outliers, que por sua vez são mais frequentes dentre as células anômalas. Do histograma pode verificar ainda certa descontinuidade no número de células medido, o que pode indicar certa limitação da técnica de amostragem ou ser devido ao reduzido número de replicatas.
+Os gráficos confirmam as análises de simetria e variabilidade feitas anterioremente, acrescentando que em ambas as distribuições pode se verificar outliers, que por sua vez são mais frequentes na variável dos cromossomos anômalos. Do histograma pode verificar ainda certa descontinuidade no número de células medido, o que pode indicar certa limitação da técnica de amostragem ou ser devido ao reduzido número de replicatas.
 
 \   
 \   
