--- a/Poisson1.qmd
+++ b/Poisson1.qmd
@@ -277,8 +277,7 @@ g1 + b1 + g2 + b2 +
 ```
 
 
-Os gráficos confirmam as análises de simetria e variabilidade feitas anterioremente, acrescentando que em ambas as distribuições pode se verificar outliers, que por sua vez são mais frequentes na variável dos cromossomos anômalos. Tanto no gráfico do histograma como no gráfico do box-plot podemos verificar 
-que há uma assimetria à direita na distribuição das células totais, apresentando uma variabilidade maior acima da mediana.
+Os gráficos confirmam as análises de simetria e variabilidade feitas anterioremente, acrescentando que em ambas as distribuições pode se verificar outliers, que por sua vez são mais frequentes na variável dos cromossomos anômalos. Tanto no gráfico do histograma como no gráfico do box-plot podemos verificar  que há uma assimetria à direita na distribuição das células totais, apresentando uma variabilidade maior acima da mediana.
 
 
 \   
@@ -296,7 +295,7 @@ rate<-dicentric$ca/dicentric$cells
 d1 <- with(dicentric, interaction.plot(doseamt, doserate, ca/cells, legend=TRUE, xlab= "Dose (hrad)", ylab="Fração de Anomalias", trace.label = "Adm. (rad/h)"))
 ```
 
-A figura 2 indica que o aumento tanto da dosagem total quanto da taxa de adiministração da radiação tem efeito positivo no aumento da fração de anomalias observado.
+A figura 2 indica que o aumento tanto da dosagem total quanto da taxa de administração da radiação tem efeito positivo no aumento da fração de anomalias observado.
 
 
 
