--- a/Poisson1.qmd
+++ b/Poisson1.qmd
@@ -187,7 +187,7 @@ dicentric|>
 ```
 
 
-Verifica-se que a quantidade total de células e a quantidade de cromossomos com anomalia têm uma distribuição assimétrica, já que a mediana e a média foram bastante distintas. O coeficiente de variação da quantidade total de células é alto, desse modo, há um grande variabilidade nessa variável, sendo até maior que a variabilidade presente na variável quantidade de cromossomos anômalos. 
+Verifica-se que a quantidade total de células e a quantidade de cromossomos com anomalia têm uma distribuição assimétrica à direita, uma vez que as suas médias são maiores que as suas medianas. O coeficiente de variação da quantidade total de células é alto, desse modo, há uma grande variabilidade nessa variável, sendo até maior que a variabilidade presente na variável quantidade de cromossomos anômalos. 
 
 Para facilitar a compreenção das medidas de células anômalas e celulas totais, apresentadas na Tabela 1, a Figura 1 mostra graficamente estas distribuições.
 
@@ -279,9 +279,6 @@ g1 + b1 + g2 + b2 +
 
 Os gráficos confirmam as análises de simetria e variabilidade feitas anterioremente, acrescentando que em ambas as distribuições pode se verificar outliers, que por sua vez são mais frequentes na variável dos cromossomos anômalos. Tanto no gráfico do histograma como no gráfico do box-plot podemos verificar  que há uma assimetria à direita na distribuição das células totais, apresentando uma variabilidade maior acima da mediana.
 
-
-\   
-\   
 
 **Figura 2: Interação entre a fração de anomalias e a dosimetria aplicada observadas.**
 
